# EzDbMigrate

./: DPTOOLS_DEPS_README_PROMPT.md  RELEASE_GUIDE.md  package-lock.json  package.json  setup_env.ps1  svelte.config.js
src-tauri/: 2  Cargo.toml  check_errors.txt  check_output.txt  check_results.txt  tauri.conf.json
src-tauri/src/: auth.rs  deps.rs  functions.rs  lib.rs  main.rs  paths.rs  storage.rs  telemetry.rs
src/lib/: stores.ts
src/routes/: +page.svelte
src/routes/auth/: +page.svelte
